--- a/.devcontainer/devcontainer.json
+++ b/.devcontainer/devcontainer.json
@@ -3,11 +3,12 @@
         "dockerfile": "Dockerfile",
         "context": ".."
     },
-    "remoteUser": "nonroot",
+    "remoteUser": "vscode",
     "customizations": {
         "vscode" : {
             "extensions": [
                 "ms-python.python",
+                "ms-python.debugpy",
                 "ms-azuretools.vscode-docker"
             ]
         }
